src/objects/ReadinessAssessment__c.object
<CustomObject>
    <description>The object that will hole the Readiness Assessment Information every time it is taken.</description>
    <fields>
        <fullName>AssessmentCode__c</fullName>
        <label>Assessment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREProfile__c</fullName>
        <label>CARE Profile</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Readiness Assessments</relationshipLabel>
        <relationshipName>ReadinessAssessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CutPercentage__c</fullName>
        <label>Cut Percentage</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CutScore__c</fullName>
        <label>Cut Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTaken__c</fullName>
        <label>Date Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EssayText__c</fullName>
        <description>The text of the Readiness Essay.</description>
        <label>Essay Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReadinessAssessmentStatus__c</fullName>
        <label>Readiness Assessment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RescheduleProcessedOn__c</fullName>
        <description>The date/time the reschedule was synchronized to the Oracle Database.</description>
        <inlineHelpText>When the reschedule was finally processed.</inlineHelpText>
        <label>Reschedule Processed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to mark the assessment as one that can be re-attempted by the student.</description>
        <inlineHelpText>Check box to mark the assessment as one that can be re-attempted by the student.</inlineHelpText>
        <label>Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <formula>IF(Percent__c &gt;= CutPercentage__c, &quot;Pass&quot;, &quot;Not Pass&quot;)</formula>
        <label>Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Readiness Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Readiness Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Readiness Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>